// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ISIS Instruments table component renders correctly 1`] = `
Object {
  "columns": Array [
    Object {
      "cellContentRenderer": [Function],
      "dataKey": "fullName",
      "defaultSort": "asc",
      "filterComponent": [Function],
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "label": "instruments.name",
    },
    Object {
      "dataKey": "type",
      "filterComponent": [Function],
      "icon": Object {
        "$$typeof": Symbol(react.memo),
        "compare": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "render": [Function],
        },
      },
      "label": "instruments.type",
    },
  ],
  "data": Array [
    Object {
      "description": "foo bar",
      "fullName": "Test instrument 1",
      "id": 1,
      "name": "Test 1",
      "url": "test url",
    },
    Object {
      "description": "foo bar",
      "id": 2,
      "name": "Test 2",
      "url": "test url",
    },
  ],
  "detailsPanel": [Function],
  "loadMoreRows": [Function],
  "onSort": [Function],
  "sort": Object {
    "fullName": "asc",
  },
  "totalRowCount": 1,
}
`;

exports[`ISIS Instruments table component renders names as links in StudyHierarchy 1`] = `
Array [
  <ForwardRef(Link)
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    data-testid="isis-instrument-table-name"
    to="/browseStudyHierarchy/instrument/1/study"
  >
    <MuiLinkRoot
      className="MuiLink-root MuiLink-underlineAlways"
      color="primary"
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      data-testid="isis-instrument-table-name"
      onBlur={[Function]}
      onFocus={[Function]}
      ownerState={
        Object {
          "children": "Test instrument 1",
          "color": "primary",
          "component": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          },
          "data-testid": "isis-instrument-table-name",
          "focusVisible": false,
          "to": "/browseStudyHierarchy/instrument/1/study",
          "underline": "always",
          "variant": "inherit",
        }
      }
      to="/browseStudyHierarchy/instrument/1/study"
      variant="inherit"
    >
      <Noop />
      <ForwardRef(Typography)
        className="MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        data-testid="isis-instrument-table-name"
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browseStudyHierarchy/instrument/1/study"
        variant="inherit"
      >
        <MuiTypographyRoot
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
          data-testid="isis-instrument-table-name"
          onBlur={[Function]}
          onFocus={[Function]}
          ownerState={
            Object {
              "align": "inherit",
              "children": "Test instrument 1",
              "className": "MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root",
              "color": "primary.main",
              "component": Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "innerRef": [Function],
                  "onClick": [Function],
                  "replace": [Function],
                  "target": [Function],
                  "to": [Function],
                },
                "render": [Function],
              },
              "data-testid": "isis-instrument-table-name",
              "gutterBottom": false,
              "noWrap": false,
              "onBlur": [Function],
              "onFocus": [Function],
              "paragraph": false,
              "sx": Object {
                "color": "primary.main",
              },
              "to": "/browseStudyHierarchy/instrument/1/study",
              "variant": "inherit",
              "variantMapping": Object {
                "body1": "p",
                "body2": "p",
                "h1": "h1",
                "h2": "h2",
                "h3": "h3",
                "h4": "h4",
                "h5": "h5",
                "h6": "h6",
                "inherit": "p",
                "subtitle1": "h6",
                "subtitle2": "h6",
              },
            }
          }
          sx={
            Object {
              "color": "primary.main",
            }
          }
          to="/browseStudyHierarchy/instrument/1/study"
        >
          <Noop />
          <Link
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
            data-testid="isis-instrument-table-name"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browseStudyHierarchy/instrument/1/study"
          >
            <LinkAnchor
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
              data-testid="isis-instrument-table-name"
              href="/browseStudyHierarchy/instrument/1/study"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
                data-testid="isis-instrument-table-name"
                href="/browseStudyHierarchy/instrument/1/study"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test instrument 1
              </a>
            </LinkAnchor>
          </Link>
        </MuiTypographyRoot>
      </ForwardRef(Typography)>
    </MuiLinkRoot>
  </ForwardRef(Link)>,
  <ForwardRef(Link)
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    data-testid="isis-instrument-table-name"
    to="/browseStudyHierarchy/instrument/2/study"
  >
    <MuiLinkRoot
      className="MuiLink-root MuiLink-underlineAlways"
      color="primary"
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      data-testid="isis-instrument-table-name"
      onBlur={[Function]}
      onFocus={[Function]}
      ownerState={
        Object {
          "children": "Test 2",
          "color": "primary",
          "component": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          },
          "data-testid": "isis-instrument-table-name",
          "focusVisible": false,
          "to": "/browseStudyHierarchy/instrument/2/study",
          "underline": "always",
          "variant": "inherit",
        }
      }
      to="/browseStudyHierarchy/instrument/2/study"
      variant="inherit"
    >
      <Noop />
      <ForwardRef(Typography)
        className="MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        data-testid="isis-instrument-table-name"
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browseStudyHierarchy/instrument/2/study"
        variant="inherit"
      >
        <MuiTypographyRoot
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
          data-testid="isis-instrument-table-name"
          onBlur={[Function]}
          onFocus={[Function]}
          ownerState={
            Object {
              "align": "inherit",
              "children": "Test 2",
              "className": "MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root",
              "color": "primary.main",
              "component": Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "innerRef": [Function],
                  "onClick": [Function],
                  "replace": [Function],
                  "target": [Function],
                  "to": [Function],
                },
                "render": [Function],
              },
              "data-testid": "isis-instrument-table-name",
              "gutterBottom": false,
              "noWrap": false,
              "onBlur": [Function],
              "onFocus": [Function],
              "paragraph": false,
              "sx": Object {
                "color": "primary.main",
              },
              "to": "/browseStudyHierarchy/instrument/2/study",
              "variant": "inherit",
              "variantMapping": Object {
                "body1": "p",
                "body2": "p",
                "h1": "h1",
                "h2": "h2",
                "h3": "h3",
                "h4": "h4",
                "h5": "h5",
                "h6": "h6",
                "inherit": "p",
                "subtitle1": "h6",
                "subtitle2": "h6",
              },
            }
          }
          sx={
            Object {
              "color": "primary.main",
            }
          }
          to="/browseStudyHierarchy/instrument/2/study"
        >
          <Noop />
          <Link
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
            data-testid="isis-instrument-table-name"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browseStudyHierarchy/instrument/2/study"
          >
            <LinkAnchor
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
              data-testid="isis-instrument-table-name"
              href="/browseStudyHierarchy/instrument/2/study"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
                data-testid="isis-instrument-table-name"
                href="/browseStudyHierarchy/instrument/2/study"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test 2
              </a>
            </LinkAnchor>
          </Link>
        </MuiTypographyRoot>
      </ForwardRef(Typography)>
    </MuiLinkRoot>
  </ForwardRef(Link)>,
]
`;

exports[`ISIS Instruments table component renders names as links when NOT in studyHierarchy 1`] = `
Array [
  <ForwardRef(Link)
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    data-testid="isis-instrument-table-name"
    to="/browse/instrument/1/facilityCycle"
  >
    <MuiLinkRoot
      className="MuiLink-root MuiLink-underlineAlways"
      color="primary"
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      data-testid="isis-instrument-table-name"
      onBlur={[Function]}
      onFocus={[Function]}
      ownerState={
        Object {
          "children": "Test instrument 1",
          "color": "primary",
          "component": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          },
          "data-testid": "isis-instrument-table-name",
          "focusVisible": false,
          "to": "/browse/instrument/1/facilityCycle",
          "underline": "always",
          "variant": "inherit",
        }
      }
      to="/browse/instrument/1/facilityCycle"
      variant="inherit"
    >
      <Noop />
      <ForwardRef(Typography)
        className="MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        data-testid="isis-instrument-table-name"
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browse/instrument/1/facilityCycle"
        variant="inherit"
      >
        <MuiTypographyRoot
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
          data-testid="isis-instrument-table-name"
          onBlur={[Function]}
          onFocus={[Function]}
          ownerState={
            Object {
              "align": "inherit",
              "children": "Test instrument 1",
              "className": "MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root",
              "color": "primary.main",
              "component": Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "innerRef": [Function],
                  "onClick": [Function],
                  "replace": [Function],
                  "target": [Function],
                  "to": [Function],
                },
                "render": [Function],
              },
              "data-testid": "isis-instrument-table-name",
              "gutterBottom": false,
              "noWrap": false,
              "onBlur": [Function],
              "onFocus": [Function],
              "paragraph": false,
              "sx": Object {
                "color": "primary.main",
              },
              "to": "/browse/instrument/1/facilityCycle",
              "variant": "inherit",
              "variantMapping": Object {
                "body1": "p",
                "body2": "p",
                "h1": "h1",
                "h2": "h2",
                "h3": "h3",
                "h4": "h4",
                "h5": "h5",
                "h6": "h6",
                "inherit": "p",
                "subtitle1": "h6",
                "subtitle2": "h6",
              },
            }
          }
          sx={
            Object {
              "color": "primary.main",
            }
          }
          to="/browse/instrument/1/facilityCycle"
        >
          <Noop />
          <Link
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
            data-testid="isis-instrument-table-name"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browse/instrument/1/facilityCycle"
          >
            <LinkAnchor
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
              data-testid="isis-instrument-table-name"
              href="/browse/instrument/1/facilityCycle"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
                data-testid="isis-instrument-table-name"
                href="/browse/instrument/1/facilityCycle"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test instrument 1
              </a>
            </LinkAnchor>
          </Link>
        </MuiTypographyRoot>
      </ForwardRef(Typography)>
    </MuiLinkRoot>
  </ForwardRef(Link)>,
  <ForwardRef(Link)
    component={
      Object {
        "$$typeof": Symbol(react.forward_ref),
        "propTypes": Object {
          "innerRef": [Function],
          "onClick": [Function],
          "replace": [Function],
          "target": [Function],
          "to": [Function],
        },
        "render": [Function],
      }
    }
    data-testid="isis-instrument-table-name"
    to="/browse/instrument/2/facilityCycle"
  >
    <MuiLinkRoot
      className="MuiLink-root MuiLink-underlineAlways"
      color="primary"
      component={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "propTypes": Object {
            "innerRef": [Function],
            "onClick": [Function],
            "replace": [Function],
            "target": [Function],
            "to": [Function],
          },
          "render": [Function],
        }
      }
      data-testid="isis-instrument-table-name"
      onBlur={[Function]}
      onFocus={[Function]}
      ownerState={
        Object {
          "children": "Test 2",
          "color": "primary",
          "component": Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          },
          "data-testid": "isis-instrument-table-name",
          "focusVisible": false,
          "to": "/browse/instrument/2/facilityCycle",
          "underline": "always",
          "variant": "inherit",
        }
      }
      to="/browse/instrument/2/facilityCycle"
      variant="inherit"
    >
      <Noop />
      <ForwardRef(Typography)
        className="MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
        color="primary"
        component={
          Object {
            "$$typeof": Symbol(react.forward_ref),
            "propTypes": Object {
              "innerRef": [Function],
              "onClick": [Function],
              "replace": [Function],
              "target": [Function],
              "to": [Function],
            },
            "render": [Function],
          }
        }
        data-testid="isis-instrument-table-name"
        onBlur={[Function]}
        onFocus={[Function]}
        to="/browse/instrument/2/facilityCycle"
        variant="inherit"
      >
        <MuiTypographyRoot
          as={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root"
          data-testid="isis-instrument-table-name"
          onBlur={[Function]}
          onFocus={[Function]}
          ownerState={
            Object {
              "align": "inherit",
              "children": "Test 2",
              "className": "MuiLink-root MuiLink-underlineAlways css-okiaqn-MuiLink-root",
              "color": "primary.main",
              "component": Object {
                "$$typeof": Symbol(react.forward_ref),
                "propTypes": Object {
                  "innerRef": [Function],
                  "onClick": [Function],
                  "replace": [Function],
                  "target": [Function],
                  "to": [Function],
                },
                "render": [Function],
              },
              "data-testid": "isis-instrument-table-name",
              "gutterBottom": false,
              "noWrap": false,
              "onBlur": [Function],
              "onFocus": [Function],
              "paragraph": false,
              "sx": Object {
                "color": "primary.main",
              },
              "to": "/browse/instrument/2/facilityCycle",
              "variant": "inherit",
              "variantMapping": Object {
                "body1": "p",
                "body2": "p",
                "h1": "h1",
                "h2": "h2",
                "h3": "h3",
                "h4": "h4",
                "h5": "h5",
                "h6": "h6",
                "inherit": "p",
                "subtitle1": "h6",
                "subtitle2": "h6",
              },
            }
          }
          sx={
            Object {
              "color": "primary.main",
            }
          }
          to="/browse/instrument/2/facilityCycle"
        >
          <Noop />
          <Link
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
            data-testid="isis-instrument-table-name"
            onBlur={[Function]}
            onFocus={[Function]}
            to="/browse/instrument/2/facilityCycle"
          >
            <LinkAnchor
              className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
              data-testid="isis-instrument-table-name"
              href="/browse/instrument/2/facilityCycle"
              navigate={[Function]}
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <a
                className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1iwtne7-MuiTypography-root-MuiLink-root"
                data-testid="isis-instrument-table-name"
                href="/browse/instrument/2/facilityCycle"
                onBlur={[Function]}
                onClick={[Function]}
                onFocus={[Function]}
              >
                Test 2
              </a>
            </LinkAnchor>
          </Link>
        </MuiTypographyRoot>
      </ForwardRef(Typography)>
    </MuiLinkRoot>
  </ForwardRef(Link)>,
]
`;
